# research-topic-selection-skill

./: .gitignore  AGENTS.md  AGENTS_APPEND_STATE_ISOLATION.md  README.md  README_GITHUB_SUPPLEMENT.md  README_en.md  WORKSPACE_POLICY.md  package_note.md  pyproject.toml  requirements.txt  skill.md
.agents/prompts/: high_risk_conflict_prompt.md  run_topic_selection.md  tiered_trigger_prompt.md
.agents/schemas/: archive_record.schema.json  collapse_test_report.schema.json  conflict_report.schema.json  context_manifest.schema.json  evidence_pack.schema.json  feasibility_report.schema.json  novelty_gate_report.schema.json  (+4 more)
config/: collision_rules.yaml  scoring_rules.yaml  topic_scope.yaml
docs/: architecture.md
examples/: divergent_ideation_prompt.md  example_run_prompt.md  example_topic_intake.json  run_demo.py  tiered_trigger_examples.md  topic_decision_brief_template.md
prompts/: 01_corpus_profile_agent.md  02_problem_landscape_agent.md  03_candidate_generator_agent.md  04_collision_planner_agent.md  05_novelty_feasibility_critic.md  06_mve_designer_agent.md  07_decision_gate_arbiter.md  08_roadmap_historian_agent.md
schemas/: candidate_topics.schema.json  collision_plan.schema.json  corpus_profile.schema.json  critic_review.schema.json  decision_summary.schema.json  mve_design.schema.json
scripts/: build_evidence_pack_scaffold.py  ingest_literature_file.py  init_topic_task.py  route_evaluation_mode.py  score_topic_matrix.py  validate_json.py  verify_skill_package.py
tests/: test_route_evaluation_mode.py  test_schema_validation.py  test_workflow.py
(+51 files in other folders)
