[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-topic-selection-skill"
version = "3.0.0"
description = "Science-first multi-agent topic selection workflow for chemical and materials engineering"
authors = [{name = "Research Topic Selection Skill"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pandas>=1.5", "pyyaml>=6.0"]

[project.scripts]
research-topic-select = "research_topic_selection_skill.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
